Finish hooking up args

--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
           </canvas>
         </div>
 
-        <button id="tcReloader">Reload</button>
+        <!-- <button id="tcReloader">Reload</button> -->
       </div>
 
       <div class="col-md-6">
