--- a/app/index3.html
+++ b/app/index3.html
@@ -151,6 +151,7 @@
   <h1>Phonics Photo Analysis</h1>
 
   <div class="container-fluid">
+
     <div class="row">
       <div class="col-md-6">
         <div id="myCanvasContainer">
@@ -159,24 +160,13 @@
           </canvas>
         </div>
 
-        <button id="tcReloader">Reload</button>
+        <!-- <button id="tcReloader">Reload</button> -->
       </div>
 
       <div class="col-md-6">
         <div class="row">
           <div class="col-md-12">
             <div id="tagsInfo"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-10">
-            <div class="thumbnail">
-              <img src="data/phonphoto.png" width="50">
-              <div class="caption">
-                <h3>Imported Photo</h3>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -250,6 +240,18 @@
 
       </div>
     </div>
+
+
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="thumbnail">
+              <img src="data/phonphoto.png" width="300">
+              <div class="caption">
+                <h3>Imported Photo</h3>
+              </div>
+            </div>
+          </div>
+        </div>
   </div>
 
   <div id="tags"></div>
